<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <com.google.android.material.appbar.MaterialToolbar
        android:elevation="18dp"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <LinearLayout
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/pokemon_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAllCaps="true"
                    android:id="@+id/pokemonName_txt"
                    android:gravity="center"
                    android:padding="10dp"
                    android:translationX="-10dp"
                    android:background="@drawable/end_radius_background"
                    android:maxLines="1"
                    android:textSize="32sp"
                    app:autoSizeMaxTextSize="32sp"
                    app:autoSizeMinTextSize="16sp"
                    app:autoSizeTextType="uniform"
                    tools:text="PIKACHU"
                    app:layout_constraintTop_toTopOf="@id/pokeball_img"
                    app:layout_constraintBottom_toBottomOf="@id/pokeball_img"
                    app:layout_constraintStart_toEndOf="@id/pokeball_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@android:color/white"
                    style="@style/TextView.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginStart="10dp"
                    android:background="@drawable/circle_background"
                    android:src="@drawable/ic_pokeball"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/pokeball_img"
                    android:layout_width="@dimen/details_pokeball_size"
                    android:layout_height="@dimen/details_pokeball_size"/>
                <ImageView
                    app:layout_constraintStart_toStartOf="@id/pokeball_img"
                    android:id="@+id/pokemon_img"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="@id/pokeball_img"
                    app:layout_constraintTop_toTopOf="@id/pokeball_img"
                    app:layout_constraintBottom_toBottomOf="@id/pokeball_img" />

                <TextView
                    android:layout_marginEnd="5dp"
                    android:id="@+id/firstType_txt"
                    style="@style/DetailsTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_radius_background"
                    app:layout_constraintTop_toBottomOf="@id/pokemonName_txt"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@id/pokeball_img"
                    app:layout_constraintEnd_toStartOf="@id/secondType_txt"
                    tools:text="Normal" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    tools:text="Fire"
                    android:id="@+id/secondType_txt"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@id/firstType_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemonName_txt"
                    style="@style/DetailsTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/characteristic_font_size"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/ic_star"
                    android:id="@+id/abilityTitle_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/details_ability"
                    style="@style/TextView"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:id="@+id/abilityValue_txt"
                    style="@style/TextView.Light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    app:autoSizeMaxTextSize="@dimen/characteristic_font_size"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBaseline_toBaselineOf="@id/abilityTitle_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/weightTitle_txt"
                    tools:text="Overground, Overground" />
                <TextView
                    android:textSize="@dimen/characteristic_font_size"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/ic_height"
                    android:layout_marginTop="10dp"
                    android:id="@+id/heightTitle_txt"
                    app:layout_constraintStart_toStartOf="@id/abilityTitle_txt"
                    app:layout_constraintTop_toBottomOf="@id/abilityTitle_txt"
                    android:text="@string/details_height"
                    style="@style/TextView"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="@dimen/characteristic_font_size"
                    app:layout_constraintBaseline_toBaselineOf="@id/heightTitle_txt"
                    android:id="@+id/heightValue_txt"
                    style="@style/TextView.Light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/abilityValue_txt"
                    tools:text="12m" />
                <TextView
                    android:textSize="@dimen/characteristic_font_size"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:id="@+id/weightTitle_txt"
                    app:layout_constraintStart_toStartOf="@id/heightTitle_txt"
                    app:layout_constraintTop_toBottomOf="@id/heightTitle_txt"
                    android:text="@string/details_weight"
                    style="@style/TextView"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/ic_weight" />

                <TextView
                    android:textSize="@dimen/characteristic_font_size"
                    android:id="@+id/weightValue_txt"
                    style="@style/TextView.Light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/heightValue_txt"
                    app:layout_constraintBaseline_toBaselineOf="@id/weightTitle_txt"
                    app:layout_constraintHorizontal_bias="0.0"
                    tools:text="130kg" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/details_stats_section"
                    android:id="@+id/headerStat_txt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextView"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/headerStat_txt"
                    app:layout_constraintTop_toTopOf="@id/headerStat_txt"
                    app:layout_constraintBottom_toBottomOf="@id/headerStat_txt"
                    android:background="@color/colorAccent"
                    android:layout_marginStart="@dimen/horizontal_page_margin"
                    android:layout_marginEnd="15dp"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />
                <View
                    app:layout_constraintStart_toEndOf="@id/headerStat_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/headerStat_txt"
                    app:layout_constraintBottom_toBottomOf="@id/headerStat_txt"
                    android:background="@color/colorAccent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="@dimen/horizontal_page_margin"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stats_recycler"
                    android:layout_marginTop="10dp"
                    tools:itemCount="6"
                    app:spanCount="3"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/holder_pokemon_stat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/headerStat_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        layout="@layout/layout_loading" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/error_container"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="@dimen/error_anim_size"
            android:layout_height="@dimen/error_anim_size"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/error" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/horizontal_page_margin"
            android:layout_marginEnd="@dimen/horizontal_page_margin"
            style="@style/TextView"
            android:id="@+id/error_txt"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/generic_error_message"
            app:layout_constraintTop_toBottomOf="@id/animation_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"  />
        <Button
            style="@style/Button"
            android:id="@+id/goBack_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/details_go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>